[package]
name = "rline"
version = "0.1.4"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/rline"
repository = "https://github.com/d-e-s-o/rline.git"
readme = "README.md"
categories = ["api-bindings", "command-line-interface", "text-editors",
              "os::unix-apis", "concurrency"]
keywords = ["readline", "input", "terminal", "console", "gui"]
description = """
Input line retrieval using libreadline's "Alternate Interface".
"""
build = "build.rs"
links = "readline"

[badges]
gitlab = { repository = "d-e-s-o/rline", branch = "master" }

[dependencies.libc]
version = "0.2"

[dependencies.uid]
version = "0.1"

[dev-dependencies.termion]
version="1.5"
