[package]
name = "rline"
version = "0.3.2"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/rline"
repository = "https://github.com/d-e-s-o/rline.git"
readme = "README.md"
categories = ["api-bindings", "command-line-interface", "text-editors",
              "os::unix-apis", "concurrency"]
keywords = ["readline", "input", "terminal", "console", "gui"]
description = """
Input line retrieval using libreadline's "Alternate Interface".
"""
build = "build.rs"
links = "readline"

[features]
# Link to libreadline statically.
static = []

[dependencies.libc]
version = "0.2"

[dependencies.uid]
version = "0.1"

[dev-dependencies.termion]
version = "2.0.1"

[dev-dependencies.unicode-segmentation]
version = "1.6"
