[package]
name = "rline"
version = "0.3.4"
edition = "2021"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/rline"
repository = "https://github.com/d-e-s-o/rline.git"
readme = "README.md"
categories = ["api-bindings", "command-line-interface", "text-editors",
              "os::unix-apis", "concurrency"]
keywords = ["readline", "input", "terminal", "console", "gui"]
description = """
Input line retrieval using libreadline's "Alternate Interface".
"""
build = "build.rs"
links = "readline"

[features]
# Link to libreadline statically.
static = []

[dependencies.libc]
version = "0.2"

[dependencies.uid]
version = "0.1"

[dev-dependencies.termion]
version = "4.0.2"

[dev-dependencies.test-fork]
version = "0.1.3"

[dev-dependencies.unicode-segmentation]
version = "1.6"

[lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
uninlined-format-args = "warn"
wildcard-imports = "warn"
